gitops/apps/monitoring/blackbox-exporter-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  template:
    spec:
      volumes:
        - name: ca-cert-volume
          secret:
            secretName: rootca
            items:
              - key: ca.crt
                path: ca.crt
      containers:
        - name: blackbox-exporter
          volumeMounts:
            - name: ca-cert-volume
              mountPath: /didactiklabs/ca.crt
              subPath: ca.crt
              readOnly: true
